syntax = "proto3";

package worker.database.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

option java_multiple_files = true;
option java_package = "com.google.worker.database.v1";
option go_package = "github.com/10Narratives/distgo-db/pkg/proto/worker/database/v1;dbv1";

service CollectionService {
  rpc ListCollections(ListCollectionsRequest) returns (ListCollectionsResponse);
  rpc GetCollection(GetCollectionRequest) returns (Collection);
  rpc CreateCollection(CreateCollectionRequest) returns (Collection);
  rpc UpdateCollection(UpdateCollectionRequest) returns (Collection);
  rpc DeleteCollection(DeleteCollectionRequest) returns (google.protobuf.Empty);
}

message Collection {
  string name = 1;
  string description = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message ListCollectionsRequest {
  string parent = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListCollectionsResponse {
  repeated Collection collections = 1;
  string next_page_token = 2;
}

message GetCollectionRequest {
  string name = 1;
}

message CreateCollectionRequest {
  string parent = 1;
  string collection_id = 2;
  Collection collection = 3;
}

message UpdateCollectionRequest {
  Collection collection = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteCollectionRequest {
  string name = 1;
}